Move classes to package